<resources>
    <string name="app_name">Drag&amp;Drop</string>
    
    <string name="intro">Place these foods in your order of preference.</string>
    
    <string name="option_1">Apple</string>
    <string name="option_2">Cake</string>
    <string name="option_3">Cheese</string>
    
    <string name="choice_1">Most favourite</string>
    <string name="choice_2">-</string>
    <string name="choice_3">Least favourite</string>
</resources>
