<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.no0ne.dragdrop.MainActivity">

    <TextView
        android:id="@+id/intro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/intro" />

    <TextView
        android:id="@+id/option_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_margin="5dp"
        android:background="#2196f3"
        android:gravity="center"
        android:text="@string/option_1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option_1"
        android:layout_margin="5dp"
        android:background="#2196f3"
        android:gravity="center"
        android:text="@string/option_2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option_2"
        android:layout_margin="5dp"
        android:background="#2196f3"
        android:gravity="center"
        android:text="@string/option_3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option_3"
        android:layout_margin="5dp"
        android:background="#ffff8d"
        android:gravity="center"
        android:text="@string/choice_1" />

    <TextView
        android:id="@+id/choice_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_1"
        android:layout_margin="5dp"
        android:background="#ffff8d"
        android:gravity="center"
        android:text="@string/choice_2" />

    <TextView
        android:id="@+id/choice_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_2"
        android:layout_margin="5dp"
        android:background="#ffff8d"
        android:gravity="center"
        android:text="@string/choice_3" />
</RelativeLayout>
